# pw-monitor-tool

./: .CMakeLists.txt.kate-swp  .gitignore  CMakeLists.txt  README.md
kplugin/: kproc.h  kproc_plugin.cpp  kproc_plugin.h  makeinstruct.txt  qmldir
package/: metadata.json
package/contents/ui/: .main.qml.kate-swp  .main.qml.swp  CustomFavoriteRadioButton.qml  main.qml
pipewire-scripts/: Monitor Line-In.desktop  Monitor Optical-In.desktop  Monitor To Speakers.desktop  list_inputs_internal.sh  list_outputs_internal.sh  monitor-sink.conf  monitor_line-in.sh  monitor_optical.sh  monitor_sb_inputs.sh  monitor_to_speakers.sh
plugin/: .makeinstruct.txt.kate-swp  .monitor-tool.h.kate-swp  destroy.sh  list_inputs.sh  list_outputs.sh  monitor-tool.h  pw_monitor_toolplugin.cpp  pw_monitor_toolplugin.h  qmldir
qplugin/: audiodevicewrapper.cpp  audiodevicewrapper.h  kproc.h  qmldir  qproc.h  qproc_plugin.cpp  qproc_plugin.h
